WanaLyzer/out/numpy/typing/tests/data/pass/scalars.pyi
from _typeshed import Incomplete

b: Incomplete
u8: Incomplete
i8: Incomplete
f8: Incomplete
c16: Incomplete
U: Incomplete
S: Incomplete

class D:
    def __index__(self) -> int: ...

class C:
    def __complex__(self) -> complex: ...

class B:
    def __int__(self) -> int: ...

class A:
    def __float__(self) -> float: ...

b_: Incomplete
td: Incomplete
AR: Incomplete
